fixed bugs in sql queries and added search route
